# Aidanic

./: .gitmodules  CMakeLists.txt  README.md  game_design.txt  notes.txt  rchit.spv  rint.spv
src/: Aidanic.cpp  Aidanic.h  CMakeLists.txt  IOInterface.cpp  IOInterface.h  ImGuiVk.cpp  ImGuiVk.h  Model.cpp  Model.h  Models.h  Renderer.cpp  Renderer.h  RendererBase.cpp  RendererBase.h  RendererRTX.cpp  RendererRTX.h
src/shaders/: ShaderCompile.bat  anyhit.rahit  background.rmiss  background_black.rmiss  background_xyz.rmiss  closesthit.rchit  closesthit.rchit.spv  common.glsl  ellipsoid.rint  imgui.frag  imgui.vert  intersect.rint  miss.rmiss  miss.rmiss.spv  raygen.rgen  raygen.rgen.spv  scene.rchit  scene.rgen  segment.rint  shadow.rahit  shadow.rchit  shadow.rmiss  sphere.rint
src/tools/: Log.cpp  Log.h  VkHelper.cpp  VkHelper.h  config.h
